# simulation

./: .gitignore  .gitmodules  Makefile  biome.json  compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.github/workflows/: test.yaml
docker/ros1/: Dockerfile
docker/ros2/: Dockerfile
libs/multimodal-ai/: package-lock.json  package.json  tsconfig.json
libs/multimodal-ai/app/: root.tsx
libs/multimodal-ai/app/components/page/logger/: Logger.tsx  atom.ts  index.ts  types.ts  utils.ts
libs/multimodal-ai/app/contexts/: LiveApiContext.tsx
libs/multimodal-ai/app/hooks/: use-live-api.ts
libs/multimodal-ai/app/lib/: multimodal-live-client.ts
libs/multimodal-ai/app/lib/multimodal-live-client/: index.ts  multimodal-live-client.ts  types.ts
libs/multimodal-ai/app/routes/: _index.tsx
libs/simulation/: .gitignore  pyproject.toml
libs/simulation/simulation/: humanoid.py  mpc.py
libs/simulation/simulation/envs/: __init__.py  cartpole.py
libs/simulation/simulation/envs/assets/: kxr_l2_humanoid.xml
libs/simulation/simulation/models/: body_d_forurdf.xml  robot_modified.xml
libs/summori/: pyproject.toml
simulation/: cart_pole.py  cartpole.py  creeper.py  dqn.py  humanoid.py  mpc.py  sb3.py
simulation/envs/: cartpole.py
simulation/envs/wrappers/: display_info.py
simulation/models/: task.xml
