[project]
name = "simulation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium[mujoco,classic-control,other]==0.29.1",
  "mujoco==3.2.5",
  "torch==2.5.1",
  "numpy==2.1.3",
  "polars==1.8.2",
  "pyarrow==17.0.0",
  "altair==5.4.1",
  "ipython==8.27.0",
  "stable-baselines3==2.3.2",
  "pip>=24.3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.3",
]

[tool.ruff]
exclude = ["mujoco_mpc/*"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]

[tool.mypy]
exclude = ["mujoco_mpc/*"]

[[tool.mypy.overrides]]
module = ["networkx.*", "plotly.*", "boto3.*", "scipy.*", "symengine.*", "sympy.*", "rlp.*", "toolz.*"]
ignore_missing_imports = true
