[project]
name = "playground"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["simulation", "summori"]

[dependency-groups]
dev = ["mypy==1.13.0", "ruff==0.7.3"]

[tool.uv.sources]
simulation = { workspace = true }
summori = { workspace = true }

[tool.uv.workspace]
members = ["libs/*"]

[tool.ruff]
exclude = ["mujoco_mpc/*"]

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
