[project]
name = "simulation"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gymnasium[mujoco,classic-control,other]==0.29.1",
  "mujoco==3.2.5",
  "torch==2.5.1",
  "numpy==2.1.3",
  "polars==1.8.2",
  "pyarrow==17.0.0",
  "altair==5.5.0",
  "ipython==8.27.0",
  "stable-baselines3==2.3.2",
  "pip==24.3.1",
  "huggingface-hub==0.26.5",
]

[dependency-groups]
dev = ["mypy==1.13.0", "obj2mjcf==0.0.25", "ruff==0.7.4"]

[tool.mypy]
exclude = ["mujoco_mpc/*", "data/*"]

[[tool.mypy.overrides]]
module = ["mujoco.*", "huggingface_hub.*"]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
